<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="week_day">Week day</string>
    <string name="location_name">Name</string>
    <string name="inside_location">Inside</string>
    <string name="outside_location">Outside</string>
    <string name="empty_locations_list">No locations found</string>
    <string name="first_last_day_record" translatable="false">00:00 - 00:00</string>
    <string name="record_duration" translatable="false"> 00:00</string>
    <string name="total_duration">Total</string>

    <string name="inside_location_text">You are in %1$s</string>
    <string name="outside_location_text">You are outside %1$s</string>

    <string name="notification_title_enter">You entered %1$s</string>
    <string name="notification_title_leave">You left %1$s</string>

    <string name="notification_text">Event registered at %1$s</string>
    <string name="inside_outside_menu">Are you inside?</string>
    <string name="request_permission_title">Permissions request</string>
    <string name="request_permission_text">Application needs permissions to run</string>
    <string name="notification_register_geofence_title">%1$s is running</string>
    <string name="notification_register_geofence_text">Application is now tracking your location</string>
    <string name="title_activity_auto_checker_settings">Settings</string>

    <string name="navigation_drawer_open">Open location list</string>
    <string name="navigation_drawer_close">Close location list</string>

    <string name="location_list_title">Locations</string>

    <string name="not_enable_location_title">Enable location</string>
    <string name="not_enable_location_text">Application needs access to location services</string>

    <!-- Preferences -->
    <string name="pref_header_visual">Visual</string>
    <string name="pref_header_times">Times</string>
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_summary_show_weekends">Whether show weekend days in record list</string>
    <string name="pref_title_show_weekends">Show weekends</string>
    <string name="pref_summary_start_day_hour">Is the hour within day when the morning begins</string>
    <string name="pref_title_start_day_hour">Morning start hour</string>
    <string name="pref_summary_weeks_to_show">Is the maximum number of visible weeks</string>
    <string name="pref_title_weeks_to_show">Number of weeks to show</string>

    <string name="pref_summary_expected_duration_per_day">Expected time in the location per day is ${h:mm}</string>
    <string name="pref_title_expected_duration_per_day">Daily time in location</string>
    <string name="pref_summary_expected_duration_per_week">Expected time in the location per week is ${h:mm}</string>
    <string name="pref_title_expected_duration_per_week">Weekly time in location</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="leave_dialog_title_text">Stop recording time</string>
    <string name="confirm_force_leave_loaction_text">Stop</string>
    <string name="notification_channel_name">All Notifications</string>
    <string name="active_recording_text">Time recording active</string>
    <string name="stopped_recording_text">Time recording stopped</string>

    <plurals name="relative_week_text">
        <item quantity="zero">This week</item>
        <item quantity="one">A week ago</item>
        <item quantity="other">%s weeks ago</item>
    </plurals>

    <string-array name="number_str_array">
        <item>zero</item>
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
        <item>eleven</item>
        <item>twelve</item>
    </string-array>


</resources>
