<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_header_visual">

        <SwitchPreference
            android:defaultValue="false"
            android:key="PREF_SHOW_WEEKENDS"
            android:summary="@string/pref_summary_show_weekends"
            android:title="@string/pref_title_show_weekends" />

        <com.github.jordicurto.autochecker.preference.NumberPickerPreference
            android:defaultValue="6"
            android:enabled="true"
            android:key="PREF_START_DAY_HOUR"
            android:summary="@string/pref_summary_start_day_hour"
            android:title="@string/pref_title_start_day_hour"
            app:maxValue="8"
            app:minValue="5"
            app:wrapSelectorWheel="false" />

        <com.github.jordicurto.autochecker.preference.NumberPickerPreference
            android:defaultValue="12"
            android:enabled="true"
            android:key="PREF_WEEKS_TO_SHOW"
            android:summary="@string/pref_summary_weeks_to_show"
            android:title="@string/pref_title_weeks_to_show"
            app:maxValue="12"
            app:minValue="3"
            app:wrapSelectorWheel="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_times">

        <com.github.jordicurto.autochecker.preference.AutoCheckerTimeDurationPickerPreference
            android:key="PREF_EXPECTED_DURATION_PER_DAY"
            android:title="@string/pref_title_expected_duration_per_day"
            android:summary="@string/pref_summary_expected_duration_per_day"
            android:defaultValue="28800000" />

        <com.github.jordicurto.autochecker.preference.AutoCheckerTimeDurationPickerPreference
            android:key="PREF_EXPECTED_DURATION_PER_WEEK"
            android:title="@string/pref_title_expected_duration_per_week"
            android:summary="@string/pref_summary_expected_duration_per_week"
            android:defaultValue="144000000" />

    </PreferenceCategory>

</PreferenceScreen>
